--- a/public/output-style-datalist.html
+++ b/public/output-style-datalist.html
@@ -14,7 +14,7 @@
 <body>
 <include src="header.html">
   {
-  "pageName": "Fancy Characters"
+  "pageName": "Output Style - Datalist"
   }
 </include>
 
@@ -22,7 +22,7 @@
 
 <div class="container">
   <div class="example">
-    <include src="example-partials/not-just-english-options.html"></include>
+    <include src="example-partials/output-style-datalist.html"></include>
   </div>
 </div>
 
