Just don't use the select-input slot.
Put the remote API example on it's own page.

Handle the case where we get 404 from the API.

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
 
   <div class="example">
     <include src="example-partials/remote-api-example.html"></include>
+    <a href="remote-api-example.html">open example on its own page</a>
   </div>
 
   <div class="example">
