--- a/public/multi-select-blur-or-unfocused-value-change.html
+++ b/public/multi-select-blur-or-unfocused-value-change.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--suppress HtmlUnknownTarget -->
   <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-  <title>Much Select - Muti-Select</title>
+  <title>Much Select - Events - blurOrUnfocusedValueChanged</title>
   <link href="demo-styles.css" rel="stylesheet">
   <script src="./styles.js"></script>
 </head>
 <body>
 <include src="header.html">
   {
-  "pageName": "Multi-Select"
+  "pageName": "Multi-Select - Events - blurOrUnfocusedValueChanged"
   }
 </include>
 
