Setting up a loading example to see the DOM cache in action.

--- a/site/attributes.html
+++ b/site/attributes.html
@@ -53,6 +53,7 @@
 
     <div class="example">
       <div id="loading-indicator"></div>
+      <a href="/loading-example">open example on its own page</a>
     </div>
 
     <div class="example">
